--- a/Treble-updated/style.css
+++ b/Treble-updated/style.css
@@ -211,6 +211,10 @@ footer section {
 /* Responsive Layout -- Extra Credit Portion -- */
 
 @media screen and (max-width: 499px) {
+  .container {
+    width: 100%;
+  }
+  
   .col-6 {
     width: 100%;
   }
@@ -220,8 +224,8 @@ footer section {
   #logo {
     position: fixed;
     top: 0px;
-    background-color: #333333;
-    width: 85%;
+    background-color: rgba(51,51,51,0.9);
+    width: 100%;
   }
   body {
     text-align: center;
@@ -241,16 +245,24 @@ footer section {
   #app img {
     margin-bottom: 50px;
   }
+
   a {
-    background: lightgrey;
+    background: #A9A9A9;
     width: 60%;
     height: 20px;
     padding: 10px;
+    border-radius: 4.5px;
   }
+
+  a:hover {
+    background: #696969;
+  }
+
   li {
     margin-bottom: 20px;
   }
   #social-media img {
     max-width: 15%;
   }
+
 }
