--- a/Treble-updated/style.css
+++ b/Treble-updated/style.css
@@ -251,15 +251,16 @@ footer section {
     margin-bottom: 50px;
   }
 
-  a {
+  #partnerships a {
+    display: block;
     background: #A9A9A9;
-    width: 60%;
-    height: 20px;
-    padding: 10px;
+    width: 75%;
+    padding: 20px 0px 20px 0px;
     border-radius: 4.5px;
+    margin: auto;
   }
 
-  a:hover {
+  #partnerships a:hover {
     background: #696969;
   }
 
