--- a/final/style.css
+++ b/final/style.css
@@ -1,12 +1,25 @@
+@import url('https://fonts.googleapis.com/css?family=Orbitron|Sarpanch|Bubbler+One');
+
+
 * {
   box-sizing: border-box;
   margin:0;
   padding: 0;
 }
 
-body { color: white; }
+body {
+  color: white;
+  background-color: black;
+  font-family: sans-serif;
+}
 
 p { letter-spacing: 2px; }
+
+img.small {
+  max-width: 200px;
+  padding-top: 10px;
+  padding-bottom: 0px;
+}
 
 
 /* Fluid Grid */
@@ -32,9 +45,24 @@ p { letter-spacing: 2px; }
     clear: both;
 }
 
+header #nav {
+  font-family: "Orbitron", sans-serif;
+  font-weight: bold;
+  font-size: 15pt;
+}
+
+header #splash {
+  font-family: "Orbitron", sans-serif;
+  font-size: 25pt;
+}
+
+header .smalltext {
+  font-size: 15pt;
+}
+
 #bio {
   color: white;
-  background-color: grey;
+  background-color: #505568;
   display: table;
 }
 
@@ -44,7 +72,7 @@ p { letter-spacing: 2px; }
 }
 
 #bio p.about {
-  height: 200px; 
+  height: 200px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -52,18 +80,41 @@ p { letter-spacing: 2px; }
 }
 
 
+#bio p.para {
+  height: 200px;
+  display: table-cell;
+  vertical-align: middle;
+  font-family: "Bubbler One";
+  font-size: 15pt;
+  line-height: 150%;
+}
+
+
 #nav {
   height: 50px;
   width: 100%;
-  background-color: purple;
+  background-color: #2B3044;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
  }
 
 
 #splash {
   width: 100%;
   height: 300px;
-  background-image: url("nasa.jpg");
+  background-image: url("images/nasa.jpg");
   background-size: cover;
+  text-align: center;
+  padding-top: 100px;
+
+}
+
+.about {
+  font-family: "Sarpanch";
+  font-weight: bold;
+  font-size: 25pt;
+  text-transform: uppercase;
 }
 
 main {
